tests/machine/x/go/group_by_sort.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_by_sort.go:17:13: undefined: Item
../../../tests/machine/x/go/group_by_sort.go:18:3: undefined: Item
../../../tests/machine/x/go/group_by_sort.go:22:3: undefined: Item
../../../tests/machine/x/go/group_by_sort.go:26:3: undefined: Item
../../../tests/machine/x/go/group_by_sort.go:30:3: undefined: Item
../../../tests/machine/x/go/group_by_sort.go:35:22: undefined: Grouped
../../../tests/machine/x/go/group_by_sort.go:98:16: undefined: Grouped
../../../tests/machine/x/go/group_by_sort.go:100:30: undefined: Grouped

1: //go:build ignore
